UI Updates - Addition of Clear Data Feature

--- a/GE Item Lookup/GE Item Lookup.csproj
+++ b/GE Item Lookup/GE Item Lookup.csproj
@@ -70,6 +70,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -165,6 +166,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="1406092682_17220.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1407887197_55278.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
